--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -1,9 +1,14 @@
 ﻿@using TnTComponents
 
+<TnTFabButton BackgroundColor="TnTColor.Error">
+    <MaterialIcon Icon="@MaterialIcons.Add" Color="TnTColor.Tertiary" />
+</TnTFabButton>
+
+
 <TnTComponents.TnTButton>
-    <MaterialIcon Icon="@MaterialIcons.Search" Color="TnTColorEnum.Primary" />
+    <MaterialIcon Icon="@MaterialIcons.Search" Color="TnTColor.Primary" />
     Button Text
-    <MaterialIcon Icon="@MaterialIcons.Poll" Color="TnTColorEnum.Secondary" />
+    <MaterialIcon Icon="@MaterialIcons.Poll" Color="TnTColor.Secondary" />
 </TnTComponents.TnTButton>
 
 <TnTComponents.TnTButton Appearance="ButtonAppearance.Outlined">
@@ -26,15 +31,15 @@
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton BackgroundColor="TnTColorEnum.Secondary" TextColor="TnTColorEnum.Tertiary">
+<TnTComponents.TnTButton BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton BackgroundColor="TnTColorEnum.Secondary" TextColor="TnTColorEnum.Tertiary" Appearance="ButtonAppearance.Outlined">
+<TnTComponents.TnTButton BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary" Appearance="ButtonAppearance.Outlined">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton BackgroundColor="TnTColorEnum.Secondary" TextColor="TnTColorEnum.Tertiary" Appearance="ButtonAppearance.Text">
+<TnTComponents.TnTButton BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary" Appearance="ButtonAppearance.Text">
     Button Text
 </TnTComponents.TnTButton>
 
