--- a/TnTComponents/Icons/MaterialIcon.razor
+++ b/TnTComponents/Icons/MaterialIcon.razor
@@ -11,7 +11,7 @@
     public MaterialIconAppearance Appearance { get; set; } = MaterialIconAppearance.Default;
 
     [Parameter]
-    public TnTColorEnum Color { get; set; } = TnTColorEnum.OnSurface;
+    public TnTColor Color { get; set; } = TnTColor.OnSurface;
 
     [Parameter, EditorRequired]
     public MaterialIcons Icon { get; set; } = default!;
