--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -31,11 +31,24 @@ tnt-button {
         @include tnt-actionable();
     }
 
-    .tnt-icon:first-child {
-        padding-right: 0.5rem;
+    &:not(.tnt-fab) {
+        .tnt-icon:first-child {
+            padding-right: 0.5rem;
+        }
+
+        .tnt-icon:last-child {
+            padding-left: 0.5rem;
+        }
     }
 
-    .tnt-icon:last-child {
-        padding-left: 0.5rem;
+    &.tnt-fab {
+        border-radius: 50%;
+        padding: 0.25rem;
+        position: fixed;
+        right: 2rem;
+        bottom: 2rem;
+        z-index: 99;
+        
+        @extend .tnt-elevation-1;
     }
 }
