--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -4,6 +4,7 @@
     <MaterialIcon Icon="@MaterialIcons.Add" Color="TnTColor.Tertiary" />
 </TnTFabButton>
 
+<TnTImageButton Icon="@MaterialIcons.Gamepad" />
 
 <TnTComponents.TnTButton>
     <MaterialIcon Icon="@MaterialIcons.Search" Color="TnTColor.Primary" />
@@ -43,26 +44,26 @@
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(0)">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(0)">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(0)" Appearance="ButtonAppearance.Outlined">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(0)" Appearance="ButtonAppearance.Outlined">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(0)" Appearance="ButtonAppearance.Text">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(0)" Appearance="ButtonAppearance.Text">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(){StartEnd = 5}">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(){StartEnd = 5}" Appearance="ButtonAppearance.Outlined">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}" Appearance="ButtonAppearance.Outlined">
     Button Text
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTCornerRadius(){StartEnd = 5}" Appearance="ButtonAppearance.Text">
+<TnTComponents.TnTButton CornerRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}" Appearance="ButtonAppearance.Text">
     Button Text
 </TnTComponents.TnTButton>
