--- a/LiveTest/LiveTest.Client/Pages/Cards.razor
+++ b/LiveTest/LiveTest.Client/Pages/Cards.razor
@@ -1,135 +1,6 @@
 ﻿@page "/card"
-@using TnTComponents
-@using TnTComponents.Enum
 
-@for (var i = 0; i < 12; ++i) {
-    var j = i + 1;
-    var k = 0;
-    var cardType = _cardType;
-    <TnTRow>
-        @for (; k < 12; k += j) {
-            @if (k + j <= 12) {
-                <TnTColumn S="@j">
-                    <TnTCard Type="@cardType">
-                        @j
-                    </TnTCard>
-                </TnTColumn>
-                <TnTDivider Orientation="Orientation.Vertical" />
-            }
-            else {
-                var l = 12 - k;
-                <TnTColumn S="@l">
-                    <TnTCard Type="@cardType">
-                        @l
-                    </TnTCard>
-                </TnTColumn>
-            }
-        }
-    </TnTRow>
-    UpdateCardType();
-}
-<TnTDivider />
-@for (var i = 0; i < 12; ++i) {
-    var j = i + 1;
-    var k = 0;
-    var cardType = _cardType;
-    <TnTRow>
-        @for (; k < 11; k += j) {
-            @if (k + j <= 11) {
-                <TnTColumn S="@j" SPull="1">
-                    <TnTCard Type="@cardType">
-                        @j
-                    </TnTCard>
-                </TnTColumn>
-            }
-        }
-    </TnTRow>
-    UpdateCardType();
-}
-<TnTDivider />
-@for (var i = 0; i < 12; ++i) {
-    var j = i + 1;
-    var k = 0;
-    var cardType = _cardType;
-    <TnTRow>
-        @for (; k < 11; k += j) {
-            @if (k + j <= 11) {
-                <TnTColumn S="@j" SPush="1">
-                    <TnTCard Type="@cardType">
-                        @j
-                    </TnTCard>
-                </TnTColumn>
-            }
-        }
-    </TnTRow>
-    UpdateCardType();
-}
-<TnTDivider />
-@for (var i = 0; i < 12; ++i) {
-    var j = i + 1;
-    var k = 0;
-    var cardType = _cardType;
-    <TnTRow>
-        @for (; k < 11; k += j) {
-            @if (k + j <= 11) {
-                <TnTColumn S="@j" SOffset="1">
-                    <TnTCard Type="@cardType">
-                        @j
-                    </TnTCard>
-                </TnTColumn>
-            }
-        }
-    </TnTRow>
-    UpdateCardType();
-}
-<TnTDivider />
-@for (var i = 0; i < 12; ++i) {
-    var j = i + 1;
-    var k = 0;
-    var cardType = _cardType;
-    <TnTRow>
-        @for (; k < 12; k += j) {
-            @if (k + j <= 12) {
-                <TnTColumn S="@j">
-                    <TnTRow>
-                        <TnTCard Type="@cardType">
-                            @j
-                        </TnTCard>
-                    </TnTRow>
-                </TnTColumn>
-            }
-            else {
-                var l = 12 - k;
-                <TnTColumn S="@l">
-                    <TnTRow>
-                        <TnTCard Type="@cardType">
-                            @l
-                        </TnTCard>
-                    </TnTRow>
-                </TnTColumn>
-            }
-        }
-    </TnTRow>
-    UpdateCardType();
-}
 
-@code {
-    private CardType _cardType = CardType.Elevated;
+<LiveTest.Client.Components.CardTesting>
 
-    private void UpdateCardType() {
-        switch (_cardType) {
-            case CardType.Elevated:
-                _cardType = CardType.Filled;
-                break;
-            case CardType.Filled:
-                _cardType = CardType.Outlined;
-                break;
-            case CardType.Outlined:
-                _cardType = CardType.Elevated;
-                break;
-            default:
-                _cardType = CardType.Elevated;
-                break;
-        }
-    }
-}
+</LiveTest.Client.Components.CardTesting>
