--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -4,8 +4,10 @@
 @import 'TnTComponents/_elevation.scss';
 @import 'TnTComponents/_border-radius.scss';
 @import 'TnTComponents/_ripple.scss';
+@import 'TnTComponents/_flex.scss';
 
 @import 'TnTComponents/_buttons.scss';
+@import 'TnTComponents/_div.scss';
 
 
 .tnt-components {
