--- a/TnTComponents/Form/TnTForm.razor
+++ b/TnTComponents/Form/TnTForm.razor
@@ -1,6 +1,6 @@
 ﻿@inherits EditForm
 @namespace TnTComponents
-@using TnTComponents.Forms
+@using TnTComponents.Form
 
 <CascadingValue Value="@Disabled" Name="@nameof(IFormItem.ParentFormDisabled)">
     <CascadingValue Value="@ReadOnly" Name="@nameof(IFormItem.ParentFormReadOnly)">
