--- a/LiveTest/LiveTest.Client/Components/UploadServer.razor
+++ b/LiveTest/LiveTest.Client/Components/UploadServer.razor
@@ -1,4 +1,5 @@
-﻿@using System.ComponentModel.DataAnnotations
+﻿@*
+@using System.ComponentModel.DataAnnotations
 @rendermode @(new InteractiveServerRenderMode(prerender:false))
 
 <TnTComponents.Forms.TnTForm Model="@_model" FormName="Form">
@@ -29,3 +30,4 @@
 
     private int _progress = 0;
 }
+*@
