--- a/LiveTest/LiveTest.Client/Components/UploadStatic.razor
+++ b/LiveTest/LiveTest.Client/Components/UploadStatic.razor
@@ -1,4 +1,4 @@
-﻿@using System.ComponentModel.DataAnnotations
+﻿@*@using System.ComponentModel.DataAnnotations
 
 
 <TnTComponents.Forms.TnTForm Model="@_model" action="/submitStaticForm" FormName="Form" enctype="multipart/form-data">
@@ -17,4 +17,4 @@
     }
 
     private Model _model = new();
-}
+}*@
