--- a/LiveTest/LiveTest.Client/Components/DateFields.razor
+++ b/LiveTest/LiveTest.Client/Components/DateFields.razor
@@ -1,4 +1,5 @@
-﻿@using static LiveTest.Client.Pages.Forms
+﻿@*
+@using static LiveTest.Client.Pages.Forms
 
 <TnTDateOnlyInput @bind-Value="@Model.DateValue" MaxDate="@(DateOnly.FromDateTime(DateTime.Now.AddMonths(1)))" MinDate="@(DateOnly.FromDateTime(DateTime.Now.AddMonths(-1)))" />
         <TnTDateOnlyInput @bind-Value="@Model.DateValue" EndIcon="search" />
@@ -70,3 +71,4 @@
     [CascadingParameter]
     public InputClass Model{ get; set; }
 }
+*@
