--- a/LiveTest/LiveTest.Client/Components/DateTimeFields.razor
+++ b/LiveTest/LiveTest.Client/Components/DateTimeFields.razor
@@ -1,4 +1,5 @@
-﻿@using static LiveTest.Client.Pages.Forms
+﻿@*
+@using static LiveTest.Client.Pages.Forms
 <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" MaxDate="@(DateTime.Now.AddMonths(1))" MinDate="@(DateTime.Now.AddMonths(-1))" />
 <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" EndIcon="search" />
 <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" SupportingText="Supporting Text" />
@@ -68,3 +69,4 @@
     [CascadingParameter]
     public InputClass Model { get; set; }
 }
+*@
