--- a/LiveTest/LiveTest.Client/Components/NumberFields.razor
+++ b/LiveTest/LiveTest.Client/Components/NumberFields.razor
@@ -1,4 +1,5 @@
-﻿@using static LiveTest.Client.Pages.Forms
+﻿@*
+@using static LiveTest.Client.Pages.Forms
 <TnTNumericInput @bind-Value="@Model.IntValue" />
 <TnTNumericInput @bind-Value="@Model.IntValue" EndIcon="search" />
 <TnTNumericInput @bind-Value="@Model.IntValue" SupportingText="Supporting Text" />
@@ -133,3 +134,4 @@
     [CascadingParameter]
     public InputClass Model { get; set; }
 }
+*@
