--- a/LiveTest/LiveTest.Client/Components/RadioFields.razor
+++ b/LiveTest/LiveTest.Client/Components/RadioFields.razor
@@ -1,4 +1,5 @@
-﻿@using static LiveTest.Client.Pages.Forms
+﻿@*
+@using static LiveTest.Client.Pages.Forms
 
 <TnTRadioGroup SupportingText="Supporting Text" Label="RadioGroup" TInputType="int?" @bind-Value="@Model.RadioOption" Name="RadioGroup">
     @foreach (var item in Items) {
@@ -94,3 +95,4 @@
         1,2,3
     };
 }
+*@
