--- a/LiveTest/LiveTest.Client/Components/SelectFields.razor
+++ b/LiveTest/LiveTest.Client/Components/SelectFields.razor
@@ -1,4 +1,5 @@
-﻿@using static LiveTest.Client.Pages.Forms
+﻿@*
+@using static LiveTest.Client.Pages.Forms
 <TnTSelect @bind-Value="@Model.SelectValue"> <option value="1">1</option><option value="2">2</option><option value="3">3</option></TnTSelect>
 <TnTSelect @bind-Value="@Model.SelectValue" EndIcon="search"> <option value="1">1</option><option value="2">2</option><option value="3">3</option></TnTSelect>
 <TnTSelect @bind-Value="@Model.SelectValue" SupportingText="Supporting Text"> <option value="1">1</option><option value="2">2</option><option value="3">3</option></TnTSelect>
@@ -67,3 +68,4 @@
     [CascadingParameter]
     public InputClass Model { get; set; }
 }
+*@
