--- a/LiveTest/LiveTest.Client/Components/TextFields.razor
+++ b/LiveTest/LiveTest.Client/Components/TextFields.razor
@@ -1,4 +1,5 @@
-﻿@using TnTComponents.Enum
+﻿@*
+@using TnTComponents.Enum
 @using static LiveTest.Client.Pages.Forms
 
 
@@ -332,3 +333,4 @@
     [CascadingParameter]
     public InputClass Model { get; set; }
 }
+*@
