--- a/TnTComponents/Form/TnTLabel.razor
+++ b/TnTComponents/Form/TnTLabel.razor
@@ -1,1 +1,7 @@
 ﻿@namespace TnTComponents
+
+<CascadingValue Value="this" IsFixed="true">
+    <label>
+        @ChildContent
+    </label>
+</CascadingValue>
