--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -8,6 +8,7 @@
 
 @import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_div.scss';
+@import 'TnTComponents/_input.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
