--- a/TnTComponents/Form/TnTLabel.razor
+++ b/TnTComponents/Form/TnTLabel.razor
@@ -6,6 +6,8 @@
            class="@Class"
            style="@Style">
         @ChildContent
-        @Label
+        <span class="tnt-label">
+            @Label
+        </span>
     </label>
 </CascadingValue>
