--- a/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsTesting.razor
@@ -1,15 +1,15 @@
 ﻿@using TnTComponents
 
 <TnTFabButton BackgroundColor="TnTColor.Error">
-    <MaterialIcon Icon="@MaterialIcons.Add" Color="TnTColor.Tertiary" />
+    <MaterialIcon Icon="@MaterialIcon.Add" Color="TnTColor.Tertiary" />
 </TnTFabButton>
 
-<TnTImageButton Icon="@MaterialIcons.Gamepad" />
+<TnTImageButton Icon="@MaterialIcon.Gamepad" />
 
 <TnTComponents.TnTButton>
-    <MaterialIcon Icon="@MaterialIcons.Search" Color="TnTColor.Primary" />
+    <MaterialIcon Icon="@MaterialIcon.Search" Color="TnTColor.Primary" />
     Button Text
-    <MaterialIcon Icon="@MaterialIcons.Poll" Color="TnTColor.Secondary" />
+    <MaterialIcon Icon="@MaterialIcon.Poll" Color="TnTColor.Secondary" />
 </TnTComponents.TnTButton>
 
 <TnTComponents.TnTButton Appearance="ButtonAppearance.Outlined">
