--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -28,7 +28,7 @@
 
 *@
 <TnTForm Model="@_model" Appearance="FormAppearance.Filled">
-    <TnTInputText StartIcon="MaterialIcons.AccessAlarm" Appearance="FormAppearance.Outlined" @bind-Value="@_model.A" BindAfter="@After" EndIcon="MaterialIcons.AccountBalanceWallet" />
+    <TnTInputText StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Outlined" @bind-Value="@_model.A" BindAfter="@After" EndIcon="MaterialIcon.AccountBalanceWallet" />
 
 
     <TnTLabel Label="My Label" Appearance="FormAppearance.Outlined">
