--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -1,38 +1,17 @@
 ﻿@using System.ComponentModel.DataAnnotations
 @using TnTComponents
 @rendermode InteractiveAuto
-@*
-<TnTInputText @bind-Value="@_value" BindAfter="@After" />
-
-
-<TnTLabel Label="My Label">
-    <TnTInputText @bind-Value="@_value" BindOnInput="true" BindAfter="@After" />
-</TnTLabel>
-
-<TnTInputText Appearance="FormAppearance.Filled" @bind-Value="@_value" BindAfter="@After" />
-
-
-<TnTLabel Label="My Label" Appearance="FormAppearance.Filled">
-    <TnTInputText @bind-Value="@_value" Placeholder="Place" BindOnInput="true" BindAfter="@After" Appearance="FormAppearance.Filled" />
-</TnTLabel>
-
-
 <TnTForm Model="@_model" Appearance="FormAppearance.Outlined">
+
     <TnTInputText Appearance="FormAppearance.Filled" @bind-Value="@_model.A" BindAfter="@After" />
 
-
-    <TnTLabel Label="My Label" Appearance="FormAppearance.Filled">
-        <TnTInputText @bind-Value="@_model.A" Placeholder="Place" BindOnInput="true" BindAfter="@After" Appearance="FormAppearance.Filled" />
+    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
+        <TnTInputText Appearance="FormAppearance.Filled" @bind-Value="@_model.A" BindAfter="@After" />
     </TnTLabel>
-</TnTForm>
+    <TnTInputText StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" BindAfter="@After" EndIcon="MaterialIcon.AccountBalanceWallet" />
 
-*@
-<TnTForm Model="@_model" Appearance="FormAppearance.Filled">
-    <TnTInputText StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Outlined" @bind-Value="@_model.A" BindAfter="@After" EndIcon="MaterialIcon.AccountBalanceWallet" />
-
-
-    <TnTLabel Label="My Label" Appearance="FormAppearance.Outlined">
-        <TnTInputText @bind-Value="@_model.A" Placeholder="Place" BindOnInput="true" BindAfter="@After" Appearance="FormAppearance.Outlined" />
+    <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
+        <TnTInputText StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" BindAfter="@After" EndIcon="MaterialIcon.AccountBalanceWallet" />
     </TnTLabel>
 </TnTForm>
 
