--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -3,15 +3,13 @@
 @rendermode InteractiveAuto
 <TnTForm Model="@_model" Appearance="FormAppearance.Outlined">
     <DataAnnotationsValidator/>
-    <TnTInputDateTime Appearance="FormAppearance.Filled" @bind-Value="@_model.A" />
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputDateTime Appearance="FormAppearance.Filled" @bind-Value="@_model.A" />
+        <TnTInputCheckbox Appearance="FormAppearance.Filled" @bind-Value="@_model.A" />
     </TnTLabel>
-    <TnTInputDateTime StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" EndIcon="MaterialIcon.AccountBalanceWallet" />
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputDateTime StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" EndIcon="MaterialIcon.AccountBalanceWallet" />
+        <TnTInputCheckbox StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" EndIcon="MaterialIcon.AccountBalanceWallet" />
     </TnTLabel>
 </TnTForm>
 
@@ -24,8 +22,7 @@
     private Model _model = new();
 
     class Model {
-        [Required]
-        public DateTime? A { get; set; }
+        public bool A { get; set; }
     }
 
 
