--- a/LiveTest/LiveTest.Client/Components/InputTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/InputTesting.razor
@@ -2,14 +2,33 @@
 @using TnTComponents
 @rendermode InteractiveAuto
 <TnTForm Model="@_model" Appearance="FormAppearance.Outlined">
-    <DataAnnotationsValidator/>
+    <DataAnnotationsValidator />
+    <TnTInputSelect @bind-Value="_model.A" Appearance="FormAppearance.Filled">
+        @foreach (var v in Values) {
+            <option value="@v">@v</option>
+        }
+    </TnTInputSelect>
 
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox Appearance="FormAppearance.Filled" @bind-Value="@_model.A" />
+        <TnTInputSelect @bind-Value="_model.A" Appearance="FormAppearance.Filled">
+            @foreach (var v in Values) {
+                <option value="@v">@v</option>
+            }
+        </TnTInputSelect>
     </TnTLabel>
 
+    <TnTInputSelect StartIcon="MaterialIcon.Satellite" EndIcon="MaterialIcon.QueryBuilder" @bind-Value="_model.A" Appearance="FormAppearance.Filled">
+        @foreach (var v in Values) {
+            <option value="@v">@v</option>
+        }
+    </TnTInputSelect>
+
     <TnTLabel Label="My Label" BackgroundColor="TnTColor.Surface" Appearance="FormAppearance.Filled">
-        <TnTInputCheckbox StartIcon="MaterialIcon.AccessAlarm" Appearance="FormAppearance.Filled" @bind-Value="@_model.A" EndIcon="MaterialIcon.AccountBalanceWallet" />
+        <TnTInputSelect StartIcon="MaterialIcon.Satellite" EndIcon="MaterialIcon.QueryBuilder" @bind-Value="_model.A" Appearance="FormAppearance.Filled">
+            @foreach (var v in Values) {
+                <option value="@v">@v</option>
+            }
+        </TnTInputSelect>
     </TnTLabel>
 </TnTForm>
 
@@ -18,12 +37,14 @@
 
 @code {
     private double _value = 0.0;
-    
+
     private Model _model = new();
 
     class Model {
-        public bool A { get; set; }
+        public string A { get; set; }
     }
+
+    string[] Values = ["One", "Two", "Three", "Four", "Five"];
 
 
 }
